--- a/src/components/forms/search.css
+++ b/src/components/forms/search.css
@@ -38,8 +38,9 @@
     width: 100%;
     padding-left: 30px;
     font-weight: lighter;
+    color: grey;
     font-size: xx-large;
-    border-bottom: 1px solid rgb(230, 230, 230);
+    border-bottom: 1px solid whitesmoke;
     font-family: 'Roboto', sans-serif;
 }
 
