styling home page

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: white;
+  /* background-color: white; */
   min-height: 70vh;
   display: flex;
   flex-direction: column;
