--- a/src/components/forms/search.css
+++ b/src/components/forms/search.css
@@ -22,6 +22,15 @@
     padding:0px 5px;
 }
 
+.suggest-mid {
+    font-weight: lighter;
+    font-size: medium;
+    border-bottom: 1px solid whitesmoke;
+    margin-left: 10%;
+    text-align:start;
+    padding: 6px;
+
+}
 .suggest:hover {
     cursor: pointer;
 }
@@ -68,16 +77,18 @@
 
 .searchInput {
     outline: none;
-    border-radius: 50px;
+    /* border-radius: 50px; */
     text-align: center;
     background: transparent;
     border: none;
-    width: 100%;
+    width: 95%;
+    max-width: 100%;
+    margin-left: 4%;
     padding-left: 30px;
     font-weight: lighter;
     color: rgb(78, 78, 78);
     font-size: xx-large;
-    border-bottom: 1px solid whitesmoke;
+    border-bottom: 1px solid rgb(235, 235, 235);
     font-family: 'Roboto', sans-serif;
 }
 
