--- a/src/components/forms/search.css
+++ b/src/components/forms/search.css
@@ -22,6 +22,13 @@
     padding:0px 5px;
 }
 
+.suggestions {
+    max-height: 60vh;
+    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 .suggest-mid {
     font-weight: lighter;
     font-size: medium;
