--- a/src/components/forms/search.css
+++ b/src/components/forms/search.css
@@ -26,8 +26,30 @@
     max-height: 60vh;
     overflow: scroll;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: visible;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(240, 238, 238); 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #5CE1E6;; 
+    border-radius: 25px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #008f94;; 
+  }
 
 .suggest-mid {
     font-weight: lighter;
