--- a/src/components/forms/search.css
+++ b/src/components/forms/search.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+
+.search-loading {
+    padding: 30px;
+    border-radius: 100px;
+    font-size: small;
+}
 .searchBox {
     width: 80vw;
     padding: 3px;
