--- a/src/components/forms/search.css
+++ b/src/components/forms/search.css
@@ -10,7 +10,7 @@
     width: 80vw;
     padding: 3px;
     text-align: center;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.651);
     box-shadow: 0 1.4rem 3rem rgba(0, 155, 147, 0.275)!important;
     display: grid;
     grid-template-columns: 1fr 100px;
