--- a/src/components/cards/result.css
+++ b/src/components/cards/result.css
@@ -4,6 +4,7 @@
 }
 .resultBox {
     margin-left: 20%;
+    padding: 5px;
     width: 60%;
     text-align: center;
     box-shadow: 0 1.4rem 3rem rgba(0, 155, 147, 0.275)!important;
@@ -37,4 +38,33 @@
     color: rgba(196, 0, 0, 0.836);
     font-weight: bold;
     padding: 2px;
+}
+
+@media only screen and (max-width: 600px) {
+    .result-text {
+        color: rgb(102, 102, 102);
+        font-size: medium;
+    }
+    .resultBox {
+        margin-left: 20%;
+        width: 60%;
+        padding: 5px;
+        text-align: center;
+        box-shadow: 0 1.4rem 3rem rgba(0, 155, 147, 0.275)!important;
+        margin-top: 30%;
+    }
+
+    .result-icon {
+        height: 30px;
+        width: 30px;
+        background-color: white;
+        box-shadow: 0 1.4rem 3rem rgba(0, 155, 147, 0.275)!important;
+        font-size: 10px;
+        object-fit: contain;
+        position: relative;
+        padding: 10px;
+        margin-top: 0px;
+        border-radius: 100px;
+    }
+    
 }
