--- a/src/motions/drawer/style.css
+++ b/src/motions/drawer/style.css
@@ -62,12 +62,13 @@
     background: wheat;
     margin-bottom: 20px;
     /* display: flex; */
-    padding: 10px;
+    padding: 3px;
     align-items: center;
     text-align: center;
     color: grey;
-    border-radius: 50px;
+    border-radius: 10px;
     cursor: pointer;
+    position: sticky;
   }
   
   .icon-placeholder {
